--- a/src/index.css
+++ b/src/index.css
@@ -1,30 +1,37 @@
 @import "tailwindcss";
 
-
-@theme{
-   --color-background:  hsl(0 0% 100%);
-   --color-foreground:  hsl(240 10% 3.9%);
-   --color-card:  hsl(0 0% 100%);
-   --color-card-foreground:  hsl(240 10% 3.9%);
-   --color-popover:  hsl(0 0% 100%);
-   --color-popover-foreground:  hsl(240 10% 3.9%);
-   --color-primary:  hsl(346.8 77.2% 49.8%);
-   --color-primary-foreground:  hsl(355.7 100% 97.3%);
-   --color-secondary:  hsl(240 4.8% 95.9%);
-   --color-secondary-foreground:  hsl(240 5.9% 10%);
-   --color-muted:  hsl(240 4.8% 95.9%);
-   --color-muted-foreground:  hsl(240 3.8% 46.1%);
-   --color-accent:  hsl(240 4.8% 95.9%);
-   --color-accent-foreground:  hsl(240 5.9% 10%);
-   --color-destructive:  hsl(0 84.2% 60.2%);
-   --color-destructive-foreground:  hsl(0 0% 98%);
-   --color-border:  hsl(240 5.9% 90%);
-   --color-input:  hsl(240 5.9% 90%);
-   --color-ring:  hsl(346.8 77.2% 49.8%);
-   --color-radius:  hsl(0.5rem);
-   --color-chart-1:  hsl(12 76% 61%);
-   --color-chart-2:  hsl(173 58% 39%);
-   --color-chart-3:  hsl(197 37% 24%);
-   --color-chart-4:  hsl(43 74% 66%);
-   --color-chart-5:  hsl(27 87% 67%);
+@theme {
+  --color-background: hsl(0 0% 100%);
+  --color-foreground: hsl(240 10% 3.9%);
+  --color-card: hsl(0 0% 100%);
+  --color-card-foreground: hsl(240 10% 3.9%);
+  --color-popover: hsl(0 0% 100%);
+  --color-popover-foreground: hsl(240 10% 3.9%);
+  --color-primary: hsl(346.8 77.2% 49.8%);
+  --color-primary-foreground: hsl(355.7 100% 97.3%);
+  --color-secondary: hsl(240 4.8% 95.9%);
+  --color-secondary-foreground: hsl(240 5.9% 10%);
+  --color-muted: hsl(240 4.8% 95.9%);
+  --color-muted-foreground: hsl(240 3.8% 46.1%);
+  --color-accent: hsl(240 4.8% 95.9%);
+  --color-accent-foreground: hsl(240 5.9% 10%);
+  --color-destructive: hsl(0 84.2% 60.2%);
+  --color-destructive-foreground: hsl(0 0% 98%);
+  --color-border: hsl(240 5.9% 90%);
+  --color-input: hsl(240 5.9% 90%);
+  --color-ring: hsl(346.8 77.2% 49.8%);
+  --color-radius: hsl(0.5rem);
+  --color-chart-1: hsl(12 76% 61%);
+  --color-chart-2: hsl(173 58% 39%);
+  --color-chart-3: hsl(197 37% 24%);
+  --color-chart-4: hsl(43 74% 66%);
+  --color-chart-5: hsl(27 87% 67%);
+  --color-sidebar: oklch(0.985 0 0);
+  --color-sidebar-foreground: oklch(0.145 0 0);
+  --color-sidebar-primary: oklch(0.205 0 0);
+  --color-sidebar-primary-foreground: oklch(0.985 0 0);
+  --color-sidebar-accent: oklch(0.97 0 0);
+  --color-sidebar-accent-foreground: oklch(0.205 0 0);
+  --color-sidebar-border: oklch(0.922 0 0);
+  --color-sidebar-ring: oklch(0.708 0 0);
 }
